--- a/ws/football/src/main/resources/application.properties
+++ b/ws/football/src/main/resources/application.properties
@@ -1,2 +1,11 @@
 spring.application.name=football
 spring.security.user.password.encoder=bcrypt
+
+spring.datasource.url=jdbc:mysql://localhost:3306/WebDB
+spring.datasource.username=root
+spring.datasource.password=webtech
+
+spring.jpa.show-sql=true
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl.auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
