FileHandling und Verknüpfung Files+Kommentare

--- a/ws/football/src/main/resources/application.properties
+++ b/ws/football/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.password=webtech
 
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl.auto=update
+spring.jpa.hibernate.ddl.auto=create-drop
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 file.upload-dir=src/main/resources/static/uploads
