--- a/ws/football/src/main/resources/application.properties
+++ b/ws/football/src/main/resources/application.properties
@@ -4,10 +4,10 @@ spring.security.user.password.encoder=bcrypt
 spring.datasource.url=jdbc:mysql://localhost:3306/WebDB
 spring.datasource.username=root
 spring.datasource.password=webtech
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl.auto=create-drop
+spring.jpa.hibernate.ddl.auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 file.upload-dir=src/main/resources/static/uploads
