--- a/ws/football/src/main/resources/application.properties
+++ b/ws/football/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.application.name=football
 spring.security.user.password.encoder=bcrypt
+spring.mvc.static-path-pattern=/**
+spring.resources.static-locations=classpath:/static/
 
 spring.datasource.url=jdbc:mysql://localhost:3306/WebDB
 spring.datasource.username=root
@@ -9,5 +11,6 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl.auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.show-sql=true
 
 file.upload-dir=src/main/resources/static/uploads
