--- a/ws/football/src/main/resources/application.properties
+++ b/ws/football/src/main/resources/application.properties
@@ -11,5 +11,6 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl.auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+logging.level.org.springframework.security=debug
 
 file.upload-dir=src/main/resources/static/uploads
